# triagebench

./: .gitignore  LICENSE  README.md  SPEC.md  cli.py  models.yaml  pyproject.toml
configs/: framing.yaml  quickstart.yaml  triage_gender_age.yaml  triage_gender_age_chestpain.yaml  triage_gender_age_neutral_fix.yaml  triage_negative_control.yaml  triage_negative_control_abdominal.yaml  triage_socioeconomic.yaml  triage_socioeconomic_abdominal.yaml  triage_socioeconomic_neuro.yaml  triage_zipcode_frontier.yaml  triage_zipcode_gemini.yaml
configs/leaderboard/: gender.yaml  language.yaml  ses.yaml
experiments/framing/: __init__.py
experiments/triage/: __init__.py
experiments/triage/scenarios/: abdominal_pain.yaml  chest_pain.yaml  neuro.yaml
leaderboard/: leaderboard.json  leaderboard.md
scripts/: leaderboard.sh
tests/: test_core.py  test_framing.py  test_triage.py
triagebench/: __init__.py  __main__.py  config.py  experiment.py  metrics.py  models.py  plot.py  reasoning.py  runner.py  trial.py
