[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "triagebench"
version = "0.1.0"
description = "Measures whether LLMs give the same decision under equivalent inputs that differ only in a way that shouldn't matter."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
google = ["google-genai>=0.3"]
all = ["anthropic>=0.40", "openai>=1.40", "google-genai>=0.3"]
dev = ["pytest>=7"]

[project.scripts]
triagebench = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["triagebench*", "experiments*"]
